--- a/LibreriaApps/res/layout-port/contentapp.xml
+++ b/LibreriaApps/res/layout-port/contentapp.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,10 +12,43 @@
 
         <ImageView
             android:id="@+id/foto"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_marginTop="5dp"
+            android:contentDescription="@string/guion"
+            android:src="@drawable/ic_launcher" />
+
+        <TextView
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:src="@drawable/ic_launcher" />
+            android:text="@string/pro"
+            android:textColor="#95a5a6"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <TextView
+            android:id="@+id/txt_creador"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/guion"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#95a5a6" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/desc"
+            android:textColor="#2c3e50"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/txt_des"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Medium Text"
+            android:textColor="#34495e" />
 
     </LinearLayout>
     
